--- a/web/main/templates/main/appraisals_table_header.html
+++ b/web/main/templates/main/appraisals_table_header.html
@@ -5,15 +5,22 @@
     <th scope="col" style="width:40px;text-align:center;">T.</th>
     <th scope="col" style="width:500px;">Dirección</th>
     <th scope="col" style="width:160px;">Tasador</th>
+    {% if state != 4 %}
     <th scope="col" style="width:160px;">Visador</th>
-    {% if state %}
+    {% endif %}
+    {% if state == 2 or state == 3 %}
     <th scope="col" style="width:40px;text-align:center;">E.</th>
     {% endif %}
-    {% if state %}
-    <th scope="col" style="width:60px;">Creada</th>
-    {% else %}
+    {% if state == 0 or state == 1 %}
     <th scope="col" style="width:100px;">Creada</th>
+    {% elif state == 2 or state == 3 %}
+    <th scope="col" style="width:60px;">Creada</th>
     {% endif %}
+    {% if state == 4 %}
+    <th scope="col" style="width:300px;">Entregada</th>
+    <th scope="col" style="width:130px;"></th>
+    {% else %}
     <th scope="col" style="width:100px;">Entrega</th>
     <th scope="col" style="width:70px;"></th>
+    {% endif %}    
 </tr>
