--- a/web/main/templates/main/comment.html
+++ b/web/main/templates/main/comment.html
@@ -1,15 +1,27 @@
 {% load custom_tags %}
-{% has_notification_comment request.user comment.id as hnc %}
-<li class="list-group-item {{hnc|yesno:"list-group-item-warning,"}} {{comment.incidencia|yesno:"list-group-item-danger,"}}" id="comment_{{comment.id}}">
+{% has_notification_comment comment.id notifications_comment_ids as hnc %}
+<li class="list-group-item {{hnc|yesno:"list-group-item-warning,"}} {{comment.incidencia|yesno:"list-group-item-danger,"}} {{comment.small|yesno:"list-group-item-small,"}}" id="comment_{{comment.id}}"%}>
   <div class="row">
     <div class="col-3">
-      <span style="font-size:0.9em;color:#000;">{{comment.user.first_name}} {{comment.user.last_name}}</span>
+      {% if not comment.small %}
+        <span style="font-size:0.9em;color:#000;">{{comment.user.first_name}} {{comment.user.last_name}}</span>
+      {% else %}
+        <span style="color:#666;"><small>{{comment.user.first_name}} {{comment.user.last_name}}</small></span>
+      {% endif %}
     </div>
     <div class="col-5">
-      <span style="font-weight:800;color:#000;">{{comment.get_event_display}}</span>
+      {% if not comment.small %}
+        <span style="font-weight:800;color:#000;">{{comment.get_event_display}}</span>
+      {% else %}
+        <span style="color:#666;"><small>{{comment.get_event_display}}</small></span>
+      {% endif %}
     </div>
     <div class="col-4 text-right">
-      <small style="color:#666;padding-right:1em;">{{comment.timeCreated|date:"d/m G:i"}}</small>
+      {% if not comment.small %}
+        <small style="color:#666;padding-right:1em;">{{comment.timeCreated|date:"d/m G:i"}}</small>
+      {% else %}
+        <small style="color:#666;padding-right:1em;font-size:0.6em;">{{comment.timeCreated|date:"d/m G:i"}}</small>
+      {% endif %}
       {% if "asignador" in groups or request.user.is_superuser %}
         {% if comment.deletable %}
           {% with class="btn_delete_comment" %}
