--- a/web/main/static/main/css/base.css
+++ b/web/main/static/main/css/base.css
@@ -52,28 +52,18 @@ input.error
     border: 1px solid #dc3545 !important; 
 }
 
-input.search
-{
-  margin: 0.0;
-  padding: 0.0em 0.0em 0.0em 0.3em;
-  font-size: 0.9em;
-  border-radius: 0;
-  height: 2.4em;
-}
-
 input.edit_contact
 {
   margin: 0.0;
   padding: 0.0em 0.0em 0.0em 0.4em;
   font-size: 0.9em;
-  border: 1px solid #aaa;
+  border: 1px solid #444;
   border-radius: 5px;
   height: 2.4em;
 }
 
 table.table-appraisals {
   table-layout:fixed;
-  display:none;
   font-size:0.8em;
   width:1350px;
 }
