--- a/web/main/static/main/css/main.css
+++ b/web/main/static/main/css/main.css
@@ -11,3 +11,19 @@ input:disabled {
     border: 1px solid #ddd;
     color: #666;
 }
+
+input:read-only {
+    background-color: transparent;
+    border: 1px solid #eee;
+    color: #222;
+}
+
+.list-group-item-small {
+	padding-top:0.1em;
+	padding-bottom:0.1em;
+}
+
+tr.notification
+{
+  background:#ffeeba;
+}
