--- a/web/main/templates/main/appraisals_table_not_assigned_tr.html
+++ b/web/main/templates/main/appraisals_table_not_assigned_tr.html
@@ -27,13 +27,11 @@
       </span>
     </div>
     {% if perms.appraisal.assign_tasador %}
-    {% if appraisal.in_revision %}
     <div class="col text-right">
-      <button type="button" class="btn btn-sm btn-light btn_unassign_tasador_modal" data-toggle="modal" data-target="#modal_unassign_tasador" value="{{appraisal.id}}" style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
-        remove_circle_outline
-      </button>
+      {% with class="btn_assign_tasador_modal" %}
+        {% include 'main/btn_assign_user.html' %}
+      {% endwith %}
     </div>
-    {% endif %}
     {% endif %}
   </div>
 </td>
@@ -49,42 +47,33 @@
       </span>
     </div>
     {% if perms.appraisal.assign_visador %}
-    {% if appraisal.in_appraisal %}
     <div class="col text-right">
-      {% if appraisal.visadorUser %}
-      <button type="button" class="btn btn-sm btn-light btn_unassign_visador_modal" data-toggle="modal" data-target="#modal_unassign_visador" value="{{appraisal.id}}" style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
-        remove_circle_outline
-      </button>
-      {% endif %}
-      {% with class="btn_assign_tasador_modal" %}
+      {% with class="btn_assign_visador_modal" %}
         {% include 'main/btn_assign_user.html' %}
       {% endwith %}
     </div>
     {% endif %}
-    {% endif %}
   </div>
 </td>
-<td style="text-align:center;">
-  {% if appraisal.in_appraisal %}
-  <i class="fas fa-play"></i>
-  {% elif appraisal.paused %}
-  <i class="fas fa-pause"></i>
-  {% endif %}
-</td>
 <td class="Creada">
-  {{appraisal.timeCreated | date:"d/m"}}
+  {{appraisal.timeCreated | date:"d/m/Y"}}
 </td>
 <td>
-  {% if appraisal.daysLeft > 3 %}
-    <p style="margin-bottom:0em;" class="font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
-  {% elif appraisal.daysLeft > 1 %}
-    <p style="margin-bottom:0em;" class="text-warning font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
-  {% else %}
-    <p style="margin-bottom:0em;" class="text-danger font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
-  {% endif %}
+{% if appraisal.daysLeft > 3 %}
+  <p style="margin-bottom:0em;" class="font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
+{% elif appraisal.daysLeft > 1 %}
+  <p style="margin-bottom:0em;" class="text-warning font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
+{% else %}
+  <p style="margin-bottom:0em;" class="text-danger font-weight-bold">{{appraisal.timeDue|date:"d/m G:i"}}</p>
+{% endif %}
 </td>
 <td style="text-align:right;">
-  {% with table="in_revision" %}
+  {% with table="not_assigned" %}
     {% include 'main/btn_logbook.html' %}
   {% endwith %}
+  {% if "asignador" in groups or user.is_superuser %}
+  {% with class="btn_archive_appraisal_modal" %}
+    {% include 'main/btn_archive.html' %}
+  {% endwith %}
+  {% endif %}
 </td>
