--- a/web/main/templates/main/btn_evaluate.html
+++ b/web/main/templates/main/btn_evaluate.html
@@ -1,6 +1,6 @@
 <button type="button" id="{{appraisal.tasadorUser.id}}" 
         value="{{appraisal.id}}"
-        class="btn btn-dark btn-sm btn-evaluate evaluateAppraisal"
+        class="btn {{appraisal.appraisalevaluation|yesno:"btn-success,btn-dark"}} btn-sm btn-evaluate btn_evaluate_modal"
         data-toggle="modal"
         data-target="#evaluateAppraisal" 
         data-ontime="{{appraisal.appraisalevaluation.onTime}}"
@@ -11,7 +11,7 @@
         data-commenttext="{{appraisal.appraisalevaluation.commentText}}"
         data-generalquality="{{appraisal.appraisalevaluation.generalQuality}}"
         data-commentfeedback="{{appraisal.appraisalevaluation.commentFeedback}}"
-        style="border:0px;padding: 3px 5px 1px 5px;">
+        style="border:0px;width:25px;height:25px;padding:0em;">
   <i class="icon material-icons" style="font-size:15px;vertical-align: text-top;">assessment</i>
   <div class="ld ld-ring ld-spin" style="display:none;"></div>
 </button>
