--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/accounting/">Contabilidad</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/archive/">Archivo</a>
+      </li>
     </ul>
     {% endif %}
   </div>
