--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -10,6 +10,9 @@
   {% include 'main/modals_delete.html' %}
 </div>
 
+<div class="modal fade" id="modal_evaluate" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
+  {% include 'main/modals_evaluate.html' %}
+</div>
 
 
 <div class="modal fade" id="modal_unassign_tasador" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -65,108 +68,6 @@
     </div>
   </div>
 </div>
-
-
-
-<div class="modal fade" id="evaluateAppraisal" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Evaluar Tasación</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-       <form action="" method="post" id="form">
-        {% csrf_token %}
-        <table class="table table-sm">
-          <thead class="thead-light">
-            <tr>
-              <th scope="col">Categoría</th>
-              <th scope="col">Cumplió</th>
-            </tr>
-          </thead>
-          <tbody>
-
-              <tr>
-               <td>
-                  {{evaluationForm.onTime.label}}
-               </td>
-               <td id="onTime">
-                  {{evaluationForm.onTime}}
-               </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.completeness.label}}
-                </td>
-                <td id="completeness">
-                   {{evaluationForm.completeness}}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.generalQuality.label}}
-                </td>
-                <td id="generalQuality">
-                  {{evaluationForm.generalQuality}}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.correctSurface.label}}
-                </td>
-                <td id="correctSurface">
-                  {{evaluationForm.correctSurface}}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.completeNormative.label}}
-                </td>
-                <td id="completeNormative">
-                  {{evaluationForm.completeNormative}}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.homologatedReferences.label}}
-                </td>
-                <td id="homologatedReferences">
-                  {{evaluationForm.homologatedReferences}}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.commentText.label}}
-                </td>
-                <td id="commentText">
-                  {{evaluationForm.commentText}}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                   {{evaluationForm.commentFeedback.label}}
-                </td>
-                <td id="commentFeedback">
-                  {{evaluationForm.commentFeedback}}
-                </td>
-              </tr>
-          </tbody>
-        </table>
-        <div class="modal-footer">
-          <input id="evaluadorAppraisal_id" name="evaluadorAppraisal_id" type="hidden" value="">
-          <input id="evaluador_id" name="evaluador_id" type="hidden" value="">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button name="btn_evaluate_appraisal" class="btn btn-primary">Evaluar</button>
-        </div>
-       </form>
-      </div>
-    </div>
-  </div>
-</div>
-
 
 <div class="modal fade" id="logbook" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
